--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "license": "ISC",
 
   "dependencies": {
-  "lodash": "4.17.23"
-}
+    "lodash": "4.17.10",
+    "axios": "0.21.1",
+    "moment": "2.29.1",
+    "express": "4.16.0",
+    "validator": "13.6.0"
+  
+  }
 }
