--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "dependencies": {
     "lodash": "4.17.10",
     "axios": "0.21.1",
-    "moment": "2.29.1",
-    "express": "4.16.0",
-    "validator": "13.6.0",
     "atob": "2.0.3"
+  },
+
+  "devDependencies":{
+    "eslint": "7.0.0",
+    "prettier": "2.0.0",
+    "moment": "2.29.1"
   
   }
 }
