--- a/package.json
+++ b/package.json
@@ -9,17 +9,13 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-
-  "dependencies": {
-    "lodash": "4.17.10",
+"dependencies": {
     "axios": "0.21.1",
-    "atob": "2.0.3"
+    "lodash": "4.17.10",
+    "validator": "13.6.0"
   },
-
-  "devDependencies":{
-    "eslint": "7.0.0",
+  "devDependencies": {
     "prettier": "2.0.0",
-    "moment": "2.29.1"
-  
+    "eslint": "7.0.0"
   }
 }
