--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
 "dependencies": {
     "axios": "0.21.1",
     "lodash": "4.17.10",
-    "validator": "13.6.0"
+    "is-promise": "2.1.0" 
   },
   "devDependencies": {
-    "prettier": "2.0.0",
-    "eslint": "7.0.0"
+    "eslint": "7.0.0",
+    "prettier": "2.0.0"
   }
 }
