--- a/package.json
+++ b/package.json
@@ -10,12 +10,9 @@
   "author": "",
   "license": "ISC",
 "dependencies": {
-    "axios": "0.21.1",
-    "lodash": "4.17.10",
-    "is-promise": "2.1.0" 
-  },
-  "devDependencies": {
-    "eslint": "7.0.0",
-    "prettier": "2.0.0"
-  }
+  "axios": "0.21.1",
+  "lodash": "4.17.10",
+  "is-promise": "2.1.0",
+  "shelljs": "0.8.4"
+}
 }
