--- a/package.json
+++ b/package.json
@@ -10,12 +10,7 @@
   "author": "",
   "license": "ISC",
 "dependencies": {
-    "axios": "0.21.1",
-    "lodash": "4.17.10",
-    "serialize-javascript": "3.0.0"
-  },
-  "devDependencies": {
-    "eslint": "7.0.0",
-    "prettier": "2.0.0"
-  }
+  "axios": "0.21.1",
+  "uma-lib-que-nao-existe-abc-123": "1.0.0"
+}
 }
