--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   "license": "ISC",
 "dependencies": {
   "axios": "0.21.1",
-  "uma-lib-que-nao-existe-abc-123": "1.0.0"
-}
+  "lodash": "4.17.10",
+  "uma-lib-que-nao-existe-abc-123": "1.0.0",
+   "serialize-javascript": "3.0.0"
+},
+  "devDependencies": {
+    "eslint": "7.0.0",
+    "prettier": "2.0.0"
+  }
 }
