--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   "license": "ISC",
 "dependencies": {
   "axios": "1.13.5",
-  "lodash": "4.17.23",
-  "uma-lib-que-nao-existe-abc-123": "1.0.0",
-   "serialize-javascript": "7.0.2"
+  "lodash": "4.17.23"
 },
   "devDependencies": {
     "eslint": "10.0.0",
